# VcpkgSimpleTemplate

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg.json
